# labelify

./: README.adoc  README.md  extract_labels.py  pyproject.toml
labelify/: __init__.py  __main__.py  cli.py  utils.py
tests/: test_cli.py  test_io.py  test_module.py
tests/one/: iris.txt  labels.ttl
tests/one/background/: sdo-labels.ttl
