[tool.poetry]
name = "labelify"
version = "0.1.0"
description = "A small program that analyses a given RDF graph and indicates whether things have labels of various sorts or not"
authors = ["Nicholas Car <nick@kurrawong.ai>"]
license = "BSD 3-Clause"
readme = "README.adoc"

[tool.poetry.dependencies]
python = "^3.9"
rdflib = "^6.3.2"
ruff = "^0.0.270"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
labelify = 'labelify:cli'

[tool.ruff]
select = [
    "I001",
    "I002"
]