[tool.poetry]
name = "labelify"
version = "0.1.3"
description = "A small program that analyses a given RDF graph and indicates whether things have labels of various sorts or not"
authors = ["Nicholas Car <nick@kurrawong.ai>"]
license = "BSD-3-Clause"
readme = "README.adoc"

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
rdflib = "^7.0.0"


sparqlwrapper = "^2.0.0"
[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^8.1.1"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
labelify = 'labelify:cli'

[tool.ruff]
select = [
    "I001",
    "I002"
]